# my-little-garden

./: .gitignore  README.md  package.json  pyproject.toml  requirements.txt
.github/workflows/: cd.yml  ci.yml
app/: manage.py
app/activities/: admin.py  forms.py  models.py  urls.py  validators.py  views.py
app/activities/migrations/: 0001_initial.py  0002_rename_fertilization_activity_task.py
app/app/: settings.py  utils.py
app/gardens/: admin.py  forms.py  models.py  urls.py  views.py
app/gardens/migrations/: 0001_initial.py  0002_watering_profile.py
app/plants/: admin.py  care.py  forms.py  models.py  services.py  urls.py  views.py
app/plants/migrations/: 0001_initial.py  0002_alter_planttask_priority.py  0003_add_source_to_planttask.py
app/static/css/: mlghome-ui.css
app/templates/: base.html  index.html
app/templates/accounts/: login.html  logout.html  register.html
app/templates/activities/: activities.html  create-update.html
app/templates/gardens/: create-update.html  delete.html  details.html  gardens.html
app/templates/partials/: navbar.html
app/templates/plants/: create-update.html  delete.html  detail.html  identify.html  list.html
app/templates/weather/: assessment.html  dashboard.html  program.html  questionnaire.html
app/weather/: admin.py  forms.py  greenkeeping.py  models.py  programs.py  services.py  urls.py  views.py
tests/: conftest.py  test_activities.py  test_care.py  test_gardens.py  test_greenkeeping.py  test_models.py  test_plants.py  test_programs.py  test_views.py  test_weather.py
(+10 files in other folders)
