[project]
name = "my-little-garden"
version = "0.1.0"
description = "Application de suivi d'entretien de jardin (greenkeeping)"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2,<5.3",
    "gunicorn",
    "psycopg2-binary",
    "python-dotenv",
    "django-htmx",
    "geopy>=2.4.1",
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-django",
    "django-extensions",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "app.settings"
pythonpath = ["app"]
testpaths = ["tests"]
